[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# only for test
[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
component = "0.1.0"
structopt = "0.3.26"
