[package]
name = "kvs-ref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3.26"