[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
byteorder = "1.4.3"
env_logger = "0.10.0"
failure = "0.1.8"
failure_derive = "0.1.8"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sled = "0.34.7"
structopt = "0.3.26"

[[bench]]
name = "engine_bench"
harness = false